# neurolib

./: CMakeLists.txt  README.md  main.cpp  readme.txt
src/: neurolib.cpp  neurolib.hpp
